--- a/shopShoes/home.html
+++ b/shopShoes/home.html
@@ -69,7 +69,7 @@
             <form>  
               <div class="control-group">
                 <input class="search-field" placeholder="Search here...">
-                <a class="search-button" href="#"></a> </div>
+                <a class="search-button" href="listItem.html"></a> </div>
             </form>
           </div>
           <!-- /.search-area --> 
